// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider children 1`] = `
<div>
  <span
    class="p-tag p-component"
  >
    <span
      class="p-tag-value"
    />
    <span>
      <div>
        hello
      </div>
    </span>
  </span>
</div>
`;

exports[`Divider default 1`] = `
<div>
  <span
    class="p-tag p-component"
  >
    <span
      class="p-tag-value"
    />
    <span />
  </span>
</div>
`;

exports[`Divider icon 1`] = `
<div>
  <span
    class="p-tag p-component"
  >
    <span
      class="p-tag-icon pi pi-check"
    />
    <span
      class="p-tag-value"
    />
    <span />
  </span>
</div>
`;

exports[`Divider rounded 1`] = `
<div>
  <span
    class="p-tag p-component p-tag-rounded"
  >
    <span
      class="p-tag-value"
    />
    <span />
  </span>
</div>
`;

exports[`Divider sevrity danger 1`] = `
<div>
  <span
    class="p-tag p-component p-tag-danger"
  >
    <span
      class="p-tag-value"
    />
    <span />
  </span>
</div>
`;

exports[`Divider sevrity info 1`] = `
<div>
  <span
    class="p-tag p-component p-tag-info"
  >
    <span
      class="p-tag-value"
    />
    <span />
  </span>
</div>
`;

exports[`Divider sevrity success 1`] = `
<div>
  <span
    class="p-tag p-component p-tag-success"
  >
    <span
      class="p-tag-value"
    />
    <span />
  </span>
</div>
`;

exports[`Divider sevrity warning 1`] = `
<div>
  <span
    class="p-tag p-component p-tag-warning"
  >
    <span
      class="p-tag-value"
    />
    <span />
  </span>
</div>
`;

exports[`Divider value 1`] = `
<div>
  <span
    class="p-tag p-component"
  >
    <span
      class="p-tag-value"
    >
      jest
    </span>
    <span />
  </span>
</div>
`;
